--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js -- no_simulator",
-    "bundle": "browserify index.js -o dist/index.js"
+    "bundle": "browserify index.js -o docs/index.js"
   },
   "keywords": [
     "Networking",
